--- a/styles.css
+++ b/styles.css
@@ -37,16 +37,17 @@ header{
     color:Purple;
     text-decoration:none;
     font-weight:500;
-    margin-left:30px;
-    margin-right:-30px;
+    margin-left:50px;
+    margin-right:-40px;
     display:inline-block;
 }
 .nav-menu a::after{
     content: '';
     position:absolute;
-    left:-3;
+    left:-3px;
+    right:15px;
     bottom:-6px;
-    width:50px;
+    width:50    px;
     height:3px;
     background:Purple;
     border-radius:5px;
@@ -95,5 +96,3 @@ header{
     background:#D7CBDF;
     color:black;
 }
-
-    
