--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,66 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-    font-family:sans-serif, Arial;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif, Arial;
 }
-body{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    min-height:110vh;
-    background:url('images/bgcweb.jpg');
-    background-size:cover;
-    background-repeat:no-repeat;
-    background-position:center;
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 110vh;
+    background-color: #D7CBDF;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
-header{
-   position:fixed;
-   top:0;
-   left:0;
-   width:100%;
-   padding:20px;
-   background:transparent;
-   display:flex;
-   justify-content:space-between;
-   align-items:center;
-   z-index:99;
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 99;
+    background-color: #7E6792;
 }
-.HopeBridge{
-    font-size:1.5em;
-    color:Purple;
-    user-select:none;
+
+.logo-container {
+    display: flex;
+    align-items: center; /* Aligns logo and text vertically */
 }
+
+.Logo {
+    width: 50px; /* Set the desired width */
+    height: 50px; /* Set the height to the same value as width */
+    border-radius: 50%; /* Makes the image circular */
+    object-fit: cover; /* Ensures the image covers the area without distortion */
+    margin-right: 10px; /* Space between logo and text */
+}
+
+.HopeBridge {
+    font-size: 1.5em;
+    color: #472A5A;
+    user-select: none;
+    font-weight: 900;
+}
+.nav-menu {
+    display: flex;
+    align-items: center; /* Aligns items vertically in the center */
+}
+
 .nav-menu a {
-    position:relative;
-    font-size:1em;
-    color:Purple;
-    text-decoration:none;
-    font-weight:500;
-    margin-left:50px;
-    margin-right:-40px;
-    display:inline-block;
+    position: relative;
+    font-size: 1em;
+    color: #472A5A;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 50px;
+    font-weight: 700;
 }
 .nav-menu a::after{
     content: '';
@@ -47,52 +68,63 @@ header{
     left:-3px;
     right:15px;
     bottom:-6px;
-    width:50    px;
+    width:50px;
     height:3px;
-    background:Purple;
+    background:#472A5A;
     border-radius:5px;
     transform:scaleX(0);
-    transition:transform .5s;
+    transition:transform 1s;
     
 }
+
 .nav-menu a:hover::after{
     transform:scaleX(1);
     transform-origin:left;
 }
-.btnLogin{
-    width:90px;
-    height:30px;
-    background:transparent;
-    border:2px solid Purple;
-    outline:none;
-    border-radius:6px;
-    cursor:pointer;
-    font-size:1em;
-    color:Purple;
-    font-weight:600;
-    margin-left:60px;
-    margin-right:-30px;
-    transition:.4s;
+
+.btnLogin {
+    width: 90px;
+    height: 35px;
+    background-color: #D7CBDF;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    color: #472A5A;
+    font-weight: 700;
+    margin-left: 20px; /* Space between links and buttons */
+    transition: .4s;
+    border: #fff;
 }
-.btnLogin:hover{
-    background:#D7CBDF;
-    color:black;
+
+.btnLogin:hover {
+    background: #472A5A;
+    color: black;
 }
-.btnSignUp{
-    width:90px;
-    height:30px;
-    background:transparent;
-    border:2px solid Purple;
-    outline:none;
-    border-radius:6px;
-    cursor:pointer;
-    font-size:1em;
-    color:Purple;
-    font-weight:600;
-    margin-left:40px;
-    transition:.4s;
+
+.btnSignUp {
+    width: 90px;
+    height: 35px;
+    background-color: #D7CBDF;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    color: #472A5A;
+    font-weight: 700;
+    margin-left: 10px; /* Space between buttons */
+    transition: .4s;
+    border: #fff;
 }
-.btnSignUp:hover{
-    background:#D7CBDF;
-    color:black;
+
+.btnSignUp:hover {
+    background: #472A5A;
+    color: black;
+}
+
+.separator {
+    display: inline-block; /* Allows it to sit inline with other elements */
+    width: 3px; /* Width of the line */
+    height: 40px; /* Height of the line */
+    background-color: #472A5A; /* Color of the line */
+    margin: 0 15px; /* Space around the line (left and right) */
 }
