--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 400px;
-    margin-top: 20px;
+    margin-top: 100px;
     margin-bottom: 10px;
 }
 
@@ -46,7 +46,10 @@ label{
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="password1"],
+input[type="password2"],
+input[type="email"] {
     width: 80%;
     padding: 12px;
     margin: 20px auto;
@@ -96,6 +99,33 @@ input[type="submit"]:hover {
     text-align: center; /* Center the text */
     margin-top: 50px; /* Space above and below the container */
 }
+
+.ar{
+    font-size: 30px;
+}
+.fgp{
+    /* text-align: center; */
+    margin-left: 20px;
+    padding: 10px;
+    font-size: 20px;
+}
+
+/* .next-button {
+    display: inline-block;
+    padding: 10px 20px;
+    width: 50px;
+    background-color: #7E6792; 
+    color: white; 
+    text-align: center; 
+    text-decoration: none; 
+    border-radius: 5px; 
+    margin-top: 10px; 
+    margin-left: 150px;
+}
+
+.next-button:hover {
+    background-color: #5b0098; 
+/* }  */
 
 .signup-container p {
     margin: 10px 0;
