--- a/styles.css
+++ b/styles.css
@@ -151,10 +151,13 @@ header {
     font-size: 18px; 
     color: #5a3e68;
     max-width: 500px;
+    margin-bottom:30px;
 }
-
+.description-container a{
+    text-decoration:none;
+}
 .btnLearnMore {
-    margin-top: 20px;
+    margin-top: 40px;
     padding: 10px 18px;
     font-size: 16px;
     background-color: #D7CBDF;
