--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,16 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #f0f0f0;
+    background-color:rgb(196, 194, 197);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     flex-direction: column;
     padding-top: 70px;
     overflow: hidden;
+    opacity: 0;
+    animation: fadeIn 0.5s ease-in forwards;
+
 }
 
 header {
@@ -30,6 +33,7 @@ header {
     justify-content: space-between;
     align-items: center;
     z-index: 99;
+    background-color: #e7e4e4;
 }
 
 .logo-container {
@@ -109,15 +113,18 @@ header {
 .btnLogin, .btnSignUp {
     width: 110px;
     height: 40px;
-    background-color: #f0f0f0;
+    background-color: #e7e4e4;
     border-radius: 6px;
     cursor: pointer;
     font-size: 1em;
     color: #000000;
     font-weight: 700;
-    margin-left: 20px;
+    margin-left:30px;
     transition: .4s;
     border-color: #000000;
+}
+.btnSignUp{
+    margin-right:20px;
 }
 
 .btnLogin:hover, .btnSignUp:hover {
@@ -154,14 +161,14 @@ header {
 .description-container h1 {
     font-size: 42px; 
     font-weight: bold;
-    color: #472A5A;
+    color: #0d0d0e;
     line-height: 1.2;
     margin-bottom: 30px;
 }
 
 .description-container p {
     font-size: 18px; 
-    color: #5a3e68;
+    color: #111111;
     max-width: 500px;
     margin-bottom: 30px;
 }
@@ -171,20 +178,24 @@ header {
 }
 
 .btnLearnMore {
-    margin-top: 40px;
-    padding: 10px 18px;
+    display: inline-block; /* Change to block or flex if needed */
+    padding: 12px 24px;
+    background-color:#615c5c;
+    color: black;
+    text-decoration: none;
     font-size: 16px;
-    background-color: #f9f1ff;
-    color: #000000;
+    font-weight:normal;
+    border-radius: 5px;
+    text-align: center;
+    transition: background-color 0.3s ease, transform 0.2s ease;
     border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: 0.3s;
+    text-decoration:none;
+    margin-top:20px;
 }
 
 .btnLearnMore:hover {
-    background: #000000;
-    color: rgb(255, 255, 255);
+    background-color:rgb(65, 64, 66);
+    transform: scale(1.05);
 }
 
 .image-container {
@@ -427,4 +438,12 @@ header {
     margin-top: 10px;
     font-size: 14px;
     color: #472A5A;
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
