added some design and homepage not yet done

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#6B587B"
+    android:background="@drawable/gradient_bg"
     tools:context=".ForgotPassword">
 
     <TextView
@@ -105,7 +105,7 @@
         android:text="Back to Start Page"
         android:fontFamily="@font/helvetica_bold"
         android:textSize="20sp"
-        android:textColor="#C3C3C3"
+        android:textColor="#D7CBDF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/changedmind"/>
