--- a/app/src/main/res/drawable/square_bg.xml
+++ b/app/src/main/res/drawable/square_bg.xml
@@ -9,7 +9,7 @@
         android:bottomLeftRadius="15dp"
         android:bottomRightRadius="15dp" />
 
-    <solid android:color="#C3C3C3"/>
+    <solid android:color="#D7CBDF"/>
 
     <stroke
         android:width="1dp"/>
