--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -57,7 +57,7 @@
         android:layout_height="60dp"
         android:background="@drawable/square_bg"
         android:ems="10"
-        android:hint="Username"
+        android:hint="Email or Username"
         android:textSize="23sp"
         android:inputType="text"
         android:padding="15dp"
