--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,6 @@
         android:id="@+id/startlogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:src="@drawable/startlogo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +31,22 @@
         app:srcCompat="@drawable/logotitle"
         tools:layout_editor_absoluteX="-125dp"
         />
+    
+    <TextView
+        android:id="@+id/message"
+        android:layout_width="407dp"
+        android:layout_height="209dp"
+        android:fontFamily="@font/helvetica_bold"
+        android:gravity="center"
+        android:text="Help the world heal with hope Bridges! You really think i needed all guards at the Hexgates?"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/signinbutton"
+        />
 
 
     <Button
@@ -40,7 +55,7 @@
         android:layout_height="60dp"
         android:backgroundTint="#D7CBDF"
         android:layout_marginLeft="55dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginBottom="120dp"
         android:text="Sign in"
         android:textColor="@color/black"
         android:textSize="22sp"
@@ -53,7 +68,7 @@
         android:id="@+id/signupbuttongreen"
         android:layout_width="320dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="130dp"
+        android:layout_marginBottom="50dp"
         android:layout_marginLeft="55dp"
         android:backgroundTint="#D7CBDF"
         android:text="Create an Account"
